Closed Bug 928542 Opened 11 years ago Closed 11 years ago

Thumbnails are missing on trailers.apple.com

Categories

(Core :: JavaScript Engine, defect)

26 Branch
x86_64
Windows 7
defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla27
Tracking Status
firefox25 --- unaffected
firefox26 + verified
firefox27 + verified

People

(Reporter: alice0775, Assigned: bhackett1024)

References

Details

(Keywords: regression)

Attachments

(2 files)

Attached image screen shot
Build Identifier:
http://hg.mozilla.org/mozilla-central/rev/4e7d1e2c93a6
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:27.0) Gecko/20100101 Firefox/27.0 ID:20131018030206

I noticed a problem when I test Bug 928379 .
Thumbnails are missing.


Steps To Reproduce:
1. Open http://trailers.apple.com/trailers/

Actual Results:
The followinf message is shown insted of thumbnails

We’re sorry
The Apple.com Trailers Application has encountered an error. The team’s been notified and we’re looking into it.
Unexpected error.

Expected Results:
Thumbnails should be shown

Regression window(m-c)
Good:
http://hg.mozilla.org/mozilla-central/rev/d54e0cce6c17
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:26.0) Gecko/20100101 Firefox/26.0 ID:20130902065759
Bad:
http://hg.mozilla.org/mozilla-central/rev/541ba36e8b9d
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:26.0) Gecko/20100101 Firefox/26.0 ID:20130903041150
Pushlog:
http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=d54e0cce6c17&tochange=541ba36e8b9d


Regression window(m-i)
Good:
http://hg.mozilla.org/integration/mozilla-inbound/rev/f66ac3e480ca
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:26.0) Gecko/20100101 Firefox/26.0 ID:20130902085957
Bad:
http://hg.mozilla.org/integration/mozilla-inbound/rev/24ffdfbf55d8
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:26.0) Gecko/20100101 Firefox/26.0 ID:20130902100657
Pushlog:
http://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=f66ac3e480ca&tochange=24ffdfbf55d8

Suspected: Bug 911204  or Bug 906788
In local build
last Good: f66ac3e480ca
First bad: abb25a18b5a5

Regressed by: abb25a18b5a5	Brian Hackett — Bug 906788 - Construct TypeObject newScript information using MIR, r=jandem.
No longer blocks: 911204
major web property, needs resolution prior to release
Assignee: nobody → bhackett1024
(I am heading off to Uni so I'll update this when I get back)

I can concur that this has been effecting Aurora for about a month now – should of reported this bug when I first noticed it (sadly I can’t remember what version I was on prior).

This is effecting both the Windows and Mac versions of Firefox Aurora.
On my MacBook I am currently using 26.0a2 (2013-10-23) x64.
Attached patch patchSplinter Review
During the definite properties analysis, when IonBuilder constant folded property reads, no instructions were generated to indicate to the later processing that the read occurred.
Attachment #821706 - Flags: review?(jdemooij)
Attachment #821706 - Flags: review?(jdemooij) → review+
Comment on attachment 821706 [details] [diff] [review]
patch

[Approval Request Comment]
Bug caused by (feature/regressing bug #): 906788
User impact if declined: broken websites
Testing completed (on m-c, etc.): on m-i
Risk to taking this patch (and alternatives if risky): low
Attachment #821706 - Flags: approval-mozilla-aurora?
https://hg.mozilla.org/mozilla-central/rev/b32d240c9a66
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla27
Verified on Nightly 27.0a1 buildid 20131025030239
QA Contact: ananuti
Attachment #821706 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
[/c/src-gecko/aurora]$ transplant b32d240c9a66
searching for changes
applying b32d240c9a66
patching file js/src/jit/IonBuilder.cpp
Hunk #1 FAILED at 8039
1 out of 1 hunks FAILED -- saving rejects to file js/src/jit/IonBuilder.cpp.rej
patch failed to apply
abort: fix up the merge and run hg transplant --continue
Verified fixed on

- Aurora 26.0a2 BuildID 20131028111546
  https://tbpl.mozilla.org/?tree=Mozilla-Aurora&rev=cc371f7026a8
- Beta 26 https://tbpl.mozilla.org/?tree=Mozilla-Beta&rev=73ef4f13486f
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: