Bug 928542 - Add placeholder CallGetProperty ops in definite properties analysis to avoid folding uses of 'this', r=jandem.